# starfetch

./: Cargo.toml  README.md  convert.py
share/constellations/: aries.json  cancer.json  capricorn.json  cassiopeia.json  cygnus.json  leo.json  libra.json  orion.json  taurus.json  ursa_major.json  ursa_minor.json  virgo.json
src/: main.rs
