[package]
name = "starfetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.56"
clap = "3.1.8"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
